fix: replace javax.xml.bind.DatatypeConverter with java.util.Base64 in BasicHeaderSAM (JDK 11 compat)
Agent-Logs-Url: https://github.com/RayDutchman/CATIA-Copilot-PLM/sessions/b5bea392-4ee0-468c-b560-53a49048ac64

Co-authored-by: RayDutchman <89128539+RayDutchman@users.noreply.github.com>